Update src and xmls

--- a/app/src/main/res/layout/activity_loan_summary.xml
+++ b/app/src/main/res/layout/activity_loan_summary.xml
@@ -29,7 +29,7 @@
         android:background="@color/steel_blue"
         android:gravity="center_horizontal"
         android:padding="8dp"
-        android:text="@string/instruction"
+        android:text="@string/loan_summary"
         android:textColor="@color/bone_white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="369dp"
-        android:layout_height="382dp"
+        android:layout_height="200dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -211,16 +211,14 @@
     <Button
         android:id="@+id/button"
         android:layout_width="196dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:onClick="closeActivity"
         android:text="@string/go_data_entry"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
