--- a/app/src/main/res/layout/activity_loan_summary.xml
+++ b/app/src/main/res/layout/activity_loan_summary.xml
@@ -38,8 +38,8 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="369dp"
-        android:layout_height="200dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
